--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -12,3 +12,7 @@ logout:
 anaxago_core_registration:
     path: /register
     defaults: { _controller: AnaxagoCoreBundle:Security:registration }
+
+projects_list:
+    path: /projects
+    defaults: { _controller: AnaxagoCoreBundle:Project:getProjects }
